Changes for 0.76    Mon Jan 30 11:30:53 GMT 2012
=================================================
* Make the empty arg stripping the default again,
  with option to override this behaviour.

Changes for 0.74    Mon Jan 30 10:24:30 GMT 2012
=================================================
* Applied patch from WATANABE Hiroaki [RT #74470]
  "Empty string cannot be passed to command"
* Resolved [RT #74373] reported by Randy Stauner
  "Compilation error when POSIX.pm fails to load"

Changes for 0.72    Wed Jun 22 12:29:59 BST 2011
=================================================
* Added IPC::Open3 support for capturing STDOUT/STDERR
  on MSWin32, prefer this over IPC::Run

Changes for 0.70    Mon Jan 31 20:34:09 GMT 2011
=================================================
* Apply a patch from Petya Kohts, RT #65276, with
  changes for run_forked:

  1) fix for the typo in the name of the signal
  2) changed default for clean_up_children (which
     seems to be the behavior expected by the majority of the users)
  3) added detection (and forwarding to the caller) of the case
     when run program is killed by signal
  4) kill_gently is now used in cases when parent died
     and when the executed program times out
  5) added options which allow to execute some user code
     in the beginning and at the end of the child

Changes for 0.68    Fri Jan  7 21:08:58 GMT 2011
=================================================
* Apply blead patch from Peter Acklam

Changes for 0.66    Tue Nov 23 12:10:24 GMT 2010
=================================================
* Apply documentation patch from Dan Dascalescu [RT # 63250]
* Apply another documentation patch from Dan Dascalescu [RT #63251]
* Fix an issue with _split_like_shell_win32() raised by tunakermit [RT #62961]

Changes for 0.64    Tue Oct 19 19:01:05 BST 2010
=================================================
* Only enable the can_run instances behaviour when 
  global variable $INSTANCES is set
