@@ -4,7 +4,7 @@
       "Jos Boumans <kane[at]cpan.org>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.113640",
+   "generated_by" : "ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "perl_5"
    ],
@@ -22,22 +22,22 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : 0
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : 0
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "runtime" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : 0,
-            "File::Spec" : 0,
-            "Locale::Maketext::Simple" : 0,
-            "Module::Load::Conditional" : 0,
+            "ExtUtils::MakeMaker" : "0",
+            "File::Spec" : "0",
+            "Locale::Maketext::Simple" : "0",
+            "Module::Load::Conditional" : "0",
             "Params::Check" : "0.20",
-            "Test::More" : 0
+            "Test::More" : "0"
          }
       }
    },
@@ -47,5 +47,5 @@
          "url" : "https://github.com/jib/ipc-cmd"
       }
    },
-   "version" : "0.76"
+   "version" : "0.78"
 }
